--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>© 2018-2020 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    <p>© 2021 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
   </footer>
 
 
